<resources>
    <string name="app_name">WB Go</string>
    <string name="app_nav_delivery">Доставка</string>
    <string name="app_nav_billing">Баланс</string>
    <string name="app_nav_setting">Настройки</string>
    <string name="app_nav_support">Поддержка</string>
    <string name="app_nav_out_app">Выйти из аккаунта</string>
    <string name="app_version">%s</string>
    <string name="app_update_version">Новая версия %s</string>
    <string name="app_update_version_available">Доступна новая версия %s</string>
    <string name="app_update_version_status">Обновить</string>
    <string name="app_update_version_load_status">Загрузка…</string>
    <string name="app_update_version_error">Обновление не установлено. Повторите операцию позднее</string>
    <string name="app_update_version_up_to_date">Обновлений нет</string>
    <string name="app_support_title">Наша служба поддержки\nнаходится в Telegram</string>
    <string name="app_support_next">Перейти</string>
    <string name="app_support_cancel">Отмена</string>
    <string name="app_no_internet_warehouse_title">Отсутствует интернет\nсоединение</string>
    <string name="order_have_little_time">Время погрузки ограничено</string>
    <string name="order_have_end_hour">Время погрузки вышло</string>
    <string name="app_no_internet_warehouse_message">Мы не можем отобразить заказы =(</string>
    <string name="app_duration_time_value">Выслать CMC повторно через %1$s:%2$s</string>
    <string name="app_duration_time_span">через</string>
    <string name="auth_courier_expects_registration">Ваша заявка находится на\nрассмотрении</string>
    <string name="auth_courier_expects_registration_24">Срок рассмотрения завки до 24 часов</string>
    <string name="auth_courier_expects_check_status">Проверить статус заявки</string>
    <string name="courier_data_type_title">Выберете форму\nсотрудничества</string>
    <string name="courier_data_type_ip_label">ИП</string>
    <string name="courier_data_type_self_employed_label">Самозанятый</string>
    <string name="courier_data_type_ip">IP</string>
    <string name="courier_data_type_self_employed">SE</string>
    <string name="courier_data_type_confirm_status">Подтвердить</string>
    <string name="demo_registration">Войти или зарегистрироваться</string>
    <string name="demo_show_demo">Ознакомиться с приложением</string>
    <string name="demo_go_to_registration">Перейти к регистрации</string>
    <string name="demo_registration_title_dialog">Внимание!</string>
    <string name="demo_registration_message_dialog">Для продолжения работы необходимо зарегистрироваться</string>
    <string name="demo_registration_positive_dialog">Регистрация</string>
    <string name="demo_registration_negative_dialog">Отмена</string>
    <string name="auth_session_error">Ваша сессия устарела. Просьба пройти повторную авторизацию.</string>
    <string name="auth_wrong_identity_error">Ошибка идентификации пользователя</string>
    <string name="no_internet_error">Проверьте подключение к сети интернет</string>
    <string name="http_timeout_error">"TimeOut. Возможно отсутствует интернет или низкая скорость соединения"</string>
    <string name="http409">"Заказ в другом статусе, либо был завершен\nПриложение будет перезагружено"</string>
    <string name="http_400_exception">"Неизвестная ошибка, попробуйте перезапустить приложение"</string>
    <string name="http_error" />
    <string name="http_unknown_error" />
    <string name="body_is_empty_or_null">"Body is null or empty" </string>
    <string name="body_is_empty">"Body is empty" </string>
    <string name="unknown_generic_error">Сервис временно недоступен\nПовторите действие чуть позже</string>
    <string name="error_service">Ошибка сервиса\nСтатус %s</string>
    <string name="unknown_internet_title_error">Интернет-соединение отсутствует</string>
    <string name="unknown_internet_message_error">Восстановите соединение и повторите попытку</string>
    <string name="error_title">Ошибка</string>
    <string name="attention_title">Внимание</string>
    <string name="courier_expects_message">Ваши данные находятся на рассмотрении</string>
    <string name="courier_expects_positive">OK</string>
    <string name="ok_button_title">OK</string>
    <string name="splash_uri_play_market">market://details?id=%s</string>
    <string name="splash_uri_google">https://play.google.com/store/apps/details?id=%s</string>
    <string name="debug_panel_caption">App Debug Console</string>
    <string name="debug_auto_substitution">Auto substitution</string>
    <string name="debug_auto_authorization">Auto authorization</string>
    <string name="debug_save">Save</string>
    <string name="debug_close">Close</string>
    <string name="selector_title">Выбор</string>
    <string name="auth_load" />
    <string name="unloading_empty_title" />
    <string name="inet_text">Интернет: </string>
    <string name="inet_ok">Есть</string>
    <string name="inet_no">Отсутствует</string>
    <string name="accepted">Принял</string>
    <string name="return_box">Возврат</string>
    <string name="delivery_box">Доставил</string>
    <string name="debt">Задолженность</string>
    <string name="error">Заполните поле</string>
    <string name="error_register_letter">Недопустимые символы</string>
    <string name="error_register_size_12">12 цифр</string>
    <string name="error_register_size_6">6 цифр</string>
    <string name="error_register_size_4">4 цифры</string>
    <string name="error_empty" />
    <string name="status_on_way">В ПУТИ</string>
    <string name="status_not_assigned">НЕ НАЗНАЧЕН</string>
    <string name="status_loading_progress">ИДЁТ ПОГРУЗКА</string>
    <string name="status_delivery">Рейс</string>
    <string name="status_not_assigned_empty">Здесь будет информация по доставке</string>
    <string name="app_ver">ver. </string>
    <string name="exit_app">Выйти из приложения?</string>
    <string name="exit_app_cancel">Отмена</string>
    <string name="empty_list">Список пуст</string>
    <string name="courier_car_number_title">Авто</string>
    <string name="courier_car_number_empty_selected_name">Выберите категорию</string>
    <string name="courier_car_number_country">RUS</string>
    <string name="courier_car_confirm">Подтвердить</string>
    <string name="courier_car_cancel">Отмена</string>
    <string name="courier_orders_confirm_car_number">%1$s</string>
    <string name="courier_orders_confirm_car_number_empty">Не указано</string>
    <string name="courier_orders_addresses">Адреса ПВЗ</string>
    <string name="courier_orders_take">Взять заказ</string>
    <string name="courier_orders_work_time">Время работы: </string>
    <string name="auth_phone_title">Введите номер телефона</string>
    <string name="auth_billing_confirm">Понятно</string>
    <string name="courier_timer_start_delivery">Начать погрузку</string>
    <string name="auth_number_phone_toolbar_label">Вход</string>
    <string name="auth_number_phone_phone_hint">Номер телефона</string>
    <string name="auth_number_phone_phone_not_found">Номер не найден, обратитесь к ответственному</string>
    <string name="auth_number_phone_phone_attempt">Осталось попыток: %1$s</string>
    <string name="auth_number_phone_phone_next">Далее</string>
    <string name="auth_number_phone_phone_default">+7</string>
    <string name="auth_check_sms_toolbar_label">Вход</string>
    <string name="auth_check_sms_title">На номер %1$s выслано СМС с кодом</string>
    <string name="auth_check_sms_hint">Код</string>
    <string name="auth_check_sms_input">Введите код</string>
    <string name="auth_check_sms_incorrect">Код введен неверно</string>
    <string name="auth_check_sms_repeat"><u>Выслать CMC повторно</u></string>
    <string name="auth_user_data_label">Основные данные</string>
    <string name="nav_default_count">0</string>
    <string name="nav_no_internet_dialog_title">У вас отсутствует интернет!</string>
    <string name="nav_no_internet_dialog_description">Вы можете продолжить работу, сохранение произойдет после того как возобновится связь</string>
    <string name="nav_no_internet_dialog_button">Понятно</string>
    <string name="flights_label">Доставка</string>
    <string name="flights_empty_flight">Вы не назначены ни на один рейс и не можете осуществлять приём товара. Обратитесь к сотруднику логистики чтобы вас назначили на рейс</string>
    <string name="flights_error_flight">Что-то пошло не так, обновите экран для продолжения</string>
    <string name="flights_empty_flight_update">Обновить</string>
    <string name="flights_parking_title">ПАРКОВКА</string>
    <string name="flights_start_adding_boxes">Начать прием коробок</string>
    <string name="flights_return_balance">Вернуть\nна баланс</string>
    <string name="flights_continue_acceptance">Продолжить\nприемку</string>
    <string name="flights_flight_number">№ %1$d</string>
    <string name="flights_parking_number">№%1$d</string>
    <string name="flights_routes_title_pref">Маршрут %1$s</string>
    <string name="flights_routes_empty">Маршруты не назначены</string>
    <string name="flights_loader">Получаем данные по рейсу</string>
    <string name="dc_loading_label">Прием</string>
    <string name="dc_loading_scan_info">Наведите камеру на штрих-код. Сканирование произойдет автоматически</string>
    <string name="dc_loading_scan_not_permission">Разрешение для использования камеры не установлено</string>
    <string name="dc_loading_hold_camera">Нажмите на экран,\nчтобы включить камеру</string>
    <string name="dc_loading_scan_loader">Идет загрузка данных</string>
    <string name="dc_loading_scan_not_permission_request">Запросить</string>
    <string name="dc_loading_scan_not_permission_request_setting">В настройки</string>
    <string name="dc_loading_manual_input_button">Ручной ввод</string>
    <string name="dc_loading_complete_button">Завершить</string>
    <string name="dc_loading_current_box">Баркод коробки</string>
    <string name="dc_loading_code_pref_box" />
    <string name="dc_loading_code_box_divider">TRBX%1$s</string>
    <string name="dc_loading_code_box">TRBX%1$s</string>
    <string name="dc_loading_code_added_box">TRBX%1$s добавлена</string>
    <string name="dc_loading_code_short_added_box">%1$s добавлена</string>
    <string name="dc_loading_code_short_has_been_added_box">%1$s добавлена ранее</string>
    <string name="dc_loading_status_box_empty_init" />
    <string name="dc_loading_status_box_empty">Начните сканирование</string>
    <string name="dc_loading_status_box_submerge">Погрузите в машину</string>
    <string name="dc_loading_status_box_return">Верните коробку</string>
    <string name="dc_loading_status_box_has_added">Погрузите в машину</string>
    <string name="dc_loading_accepted">Принято</string>
    <string name="dc_loading_parking">Парковка №</string>
    <string name="dc_loading_list"><u>Список</u></string>
    <string name="dc_loading_default_count_box">-</string>
    <string name="keyboard_button0">0</string>
    <string name="keyboard_button1">1</string>
    <string name="keyboard_button2">2</string>
    <string name="keyboard_button3">3</string>
    <string name="keyboard_button4">4</string>
    <string name="keyboard_button5">5</string>
    <string name="keyboard_button6">6</string>
    <string name="keyboard_button7">7</string>
    <string name="keyboard_button8">8</string>
    <string name="keyboard_button9">9</string>
    <string name="keyboard_symbolA">A</string>
    <string name="keyboard_symbolB">B</string>
    <string name="keyboard_symbolE">E</string>
    <string name="keyboard_symbolK">K</string>
    <string name="keyboard_symbolM">M</string>
    <string name="keyboard_symbolH">H</string>
    <string name="keyboard_symbolO">O</string>
    <string name="keyboard_symbolP">P</string>
    <string name="keyboard_symbolC">C</string>
    <string name="keyboard_symbolT">T</string>
    <string name="keyboard_symbolY">У</string>
    <string name="keyboard_symbolX">X</string>
</resources>