<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/ru.wb.perevozka.ui.auth.keyboard.KeyboardButtonView"
    android:id="@+id/symbol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolA"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="@+id/guideline12"
        app:layout_constraintRight_toLeftOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="parent"
        app:value="BUTTON_A"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolB"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent"
        app:value="BUTTON_B"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolE"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent"
        app:value="BUTTON_E"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_k"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolK"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintLeft_toLeftOf="@+id/guideline12"
        app:layout_constraintRight_toLeftOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:value="BUTTON_K"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_m"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolM"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:value="BUTTON_M"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_h"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolH"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:value="BUTTON_H"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_o"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolO"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="@+id/guideline12"
        app:layout_constraintRight_toLeftOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:value="BUTTON_O"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_p"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolP"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:value="BUTTON_P"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolC"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:value="BUTTON_C"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_t"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolT"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/guideline10"
        app:value="BUTTON_T"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_y"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolY"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/guideline10"
        app:value="BUTTON_Y"
        custom:strokeWidth="@dimen/dp_0d2" />

    <ru.wb.go.ui.auth.keyboard.KeyboardButtonView
        android:id="@+id/button_x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/keyboard_symbolX"
        android:textSize="@dimen/pin_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/guideline10"
        app:value="BUTTON_X"
        custom:strokeWidth="@dimen/dp_0d2" />

    <View
        android:id="@+id/overlay_keyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>